--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,4 @@
 rootProject.name = 'fxframework'
 include ':gdb'
-project(':gdb').projectDir = new File('../JDB/gdb')
-
+project(':gdb').projectDir = new File('/JDB/gdb')
 include ':jdb'
-project(':jdb').projectDir = new File('../JDB')
