--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,6 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation group: 'org.controlsfx', name: 'controlsfx', version: '8.0.5'
-    compile group: 'net.lingala.zip4j', name: 'zip4j', version: '2.3.0'
+    implementation group: 'net.lingala.zip4j', name: 'zip4j', version: '2.3.0'
 
 }
